--- a/css/home.css
+++ b/css/home.css
@@ -1,1 +1,63 @@
-/* No CSS *//*# sourceMappingURL=home.css.map */
+/*Universal Use*/
+.img-cover {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.qb-font-light {
+  color: #ececec !important;
+}
+
+.qb-header {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  width: 100%;
+}
+
+.qb-header .qb-navbar {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.qb-header .qb-navbar .qb-navbar-collapse {
+  display: inline-block;
+  position: absolute;
+  right: 0px;
+}
+
+@media only screen and (max-width: 768px) {
+  .qb-header .qb-navbar .qb-navbar-collapse {
+    display: block;
+    position: relative;
+  }
+}
+
+.qb-wall {
+  width: 100%;
+  height: 100vh;
+}
+
+.qb-wall .qb-wall-bg {
+  height: 100%;
+  width: 100%;
+}
+
+.qb-wall .qb-wall-bg .qb-wall-cover {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-family: 'Permanent Marker', cursive;
+  display: table;
+}
+
+.qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-text {
+  color: #f1f1f1;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 500px;
+}
+/*# sourceMappingURL=home.css.map */
