--- a/css/home.css
+++ b/css/home.css
@@ -9,11 +9,23 @@
   color: #ececec !important;
 }
 
+.qbColorGreen {
+  background-color: #06A763 !important;
+}
+
 .qb-header {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 2;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
   width: 100%;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+}
+
+.qb-header .qb-header-logo {
+  font-size: 25px;
 }
 
 .qb-header .qb-navbar {
@@ -50,14 +62,178 @@
   position: relative;
   background-color: rgba(0, 0, 0, 0.2);
   font-family: 'Permanent Marker', cursive;
+}
+
+.qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content {
+  height: 100%;
+  width: 100%;
   display: table;
 }
 
-.qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-text {
+.qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content .qb-wall-text {
   color: #f1f1f1;
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  font-size: 50px;
+  font-size: 60px;
+  padding: 5%;
+}
+
+@media only screen and (max-width: 600px) {
+  .qb-wall {
+    width: 100%;
+    height: 100vh;
+  }
+  .qb-wall .qb-wall-bg {
+    height: 100%;
+    width: 100%;
+  }
+  .qb-wall .qb-wall-bg .qb-wall-cover {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.2);
+    font-family: 'Permanent Marker', cursive;
+  }
+  .qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content {
+    height: 100%;
+    width: 100%;
+    display: table;
+  }
+  .qb-wall .qb-wall-bg .qb-wall-cover .qb-wall-content .qb-wall-text {
+    color: #f1f1f1;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 40px;
+    padding: 5%;
+  }
+}
+
+.qb-main {
+  background-color: #08b76d;
+  /*08b76d*/
+  padding-top: 150px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.qb-main .qb-pic-card-cover {
+  text-align: center;
+  height: 175px;
+}
+
+.qb-main .qb-pic-card-cover .qb-pic-card {
+  display: inline-block;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+}
+
+.qb-main .qb-pic-card-cover .qb-pic-card .qb-card {
+  width: 400px;
+  height: 400px;
+  padding: 20px;
+  background-color: #ffffee;
+}
+
+.qb-main .qb-pic-card-cover .qb-pic-card .qb-card .qb-pic {
+  width: 100%;
+  height: 100%;
+}
+
+.qb-main .qb-info-card-cover {
+  padding-bottom: 200px;
+  background-color: #fff;
+}
+
+.qb-main .qb-info-card-cover .qb-card-translate {
+  -webkit-transform: translateY(200px);
+          transform: translateY(200px);
+}
+
+.qb-main .qb-info-card-cover .qb-card-padding-top {
+  padding-top: 60px;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card {
+  height: auto;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-info-card-head {
+  text-align: center;
+  font-size: 45px;
+  height: auto;
+  font-weight: 500;
+  color: #3a3a3a;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-info-card-text {
+  display: inline-block;
+  padding-top: 20px;
+  width: 100%;
+  padding-bottom: 20px;
+  padding-right: 0px;
+  padding-left: 0px;
+  text-align: center;
+  font-size: 20px;
+  height: auto;
+  font-weight: 500;
+  color: #3a3a3a;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-info-card-width-limit {
+  width: 600px;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-info-card-width-full {
+  width: 100%;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-project-card {
+  display: inline-block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .qb-main {
+    background-color: #08b76d;
+    /*08b76d*/
+    padding-top: 80px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    overflow: hidden;
+  }
+  .qb-main .qb-pic-card-cover {
+    text-align: center;
+    height: 35vw;
+  }
+  .qb-main .qb-pic-card-cover .qb-pic-card {
+    display: inline-block;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+  }
+  .qb-main .qb-pic-card-cover .qb-pic-card .qb-card {
+    width: 70vw;
+    height: 70vw;
+    background-color: #ffffee;
+  }
+  .qb-main .qb-pic-card-cover .qb-pic-card .qb-card .qb-pic {
+    width: 100%;
+    height: 100%;
+  }
+  .qb-main .qb-info-card-cover {
+    background-color: #fbfbfb;
+  }
+  .qb-main .qb-info-card-cover .qb-card-translate {
+    -webkit-transform: translateY(35vw);
+            transform: translateY(35vw);
+  }
+  .qb-main .qb-info-card-cover .qb-info-card {
+    height: 500px;
+  }
 }
 /*# sourceMappingURL=home.css.map */
