--- a/css/home.scss
+++ b/css/home.scss
@@ -7,11 +7,20 @@
 .qb-font-light{
     color: rgb(236, 236, 236) !important;
 }
+.qbColorGreen{
+    background-color: #06A763 !important;
+}
 .qb-header{
-    position: absolute;
-    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    background-color: rgba(0,0,0,0.3);
     z-index: 2;
+    transition-duration: 0.5s;
     width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28); 
+
+    .qb-header-logo{
+        font-size: 25px;
+    }
 
     .qb-navbar{
         padding-left: 5%;
@@ -50,14 +59,188 @@
             position: relative;
             background-color: rgba(0,0,0,0.2);
             font-family: 'Permanent Marker', cursive;
-            display: table;
 
-            .qb-wall-text{
-                color: rgb(241, 241, 241);
-                display: table-cell;
-                vertical-align: middle;
+            .qb-wall-content{
+                height: 100%;
+                width: 100%;
+                display: table;
+
+                .qb-wall-text{
+                    color: rgb(241, 241, 241);
+                    display: table-cell;
+                    vertical-align: middle;
+                    text-align: center;
+                    font-size: 60px;
+                    padding: 5%;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .qb-wall{
+        width: 100%;
+        height: 100vh;
+        .qb-wall-bg{
+            height: 100%;
+            width: 100%;
+    
+            .qb-wall-cover{
+                height: 100%;
+                width:100%;
+                position: relative;
+                background-color: rgba(0,0,0,0.2);
+                font-family: 'Permanent Marker', cursive;
+                
+                .qb-wall-content{
+                    height: 100%;
+                    width: 100%;
+                    display: table;
+    
+                    .qb-wall-text{
+                        color: rgb(241, 241, 241);
+                        display: table-cell;
+                        vertical-align: middle;
+                        text-align: center;
+                        font-size: 40px;
+                        padding: 5%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.qb-main{
+    background-color: #08b76d;
+    /*08b76d*/
+    padding-top: 150px;
+    padding-left: 50px;
+    padding-right: 50px;
+
+    .qb-pic-card-cover{
+        text-align: center;
+        height: 175px;
+
+        .qb-pic-card{
+            display: inline-block;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+                
+            .qb-card{
+                width: 400px;
+                height: 400px;
+                padding: 20px;
+                background-color: #ffffee;
+
+                .qb-pic{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+
+    .qb-info-card-cover{
+        padding-bottom: 200px;
+        background-color: #fff;
+
+        
+        .qb-card-translate{
+            transform: translateY(200px);
+        }
+        
+        .qb-card-padding-top{
+            padding-top: 60px;
+        }
+
+        .qb-info-card{
+            height: auto;
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+
+            .qb-info-card-head{
                 text-align: center;
-                font-size: 50px;
+                font-size: 45px;
+                height: auto;
+                font-weight: 500;
+                color: #3a3a3a;
+            }
+
+            .qb-info-card-text{
+                display: inline-block;
+                padding-top: 20px;
+                width: 100%;
+                padding-bottom: 20px;
+                padding-right: 0px;
+                padding-left: 0px;
+                text-align: center;
+                font-size: 20px;
+                height: auto;
+                font-weight: 500;
+                color: #3a3a3a;
+            }
+
+            .qb-info-card-width-limit{
+                width: 600px;
+            }
+
+            .qb-info-card-width-full{
+                width: 100%;
+            }
+
+            .qb-project-card{
+                display: inline-block;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .qb-main{
+        background-color: #08b76d;
+        /*08b76d*/
+        padding-top: 80px;
+        padding-bottom: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+        overflow: hidden;
+    
+        .qb-pic-card-cover{
+            text-align: center;
+            height: 35vw;
+    
+            .qb-pic-card{
+                display: inline-block;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+                
+                .qb-card{
+                    width: 70vw;
+                    height: 70vw;
+                    background-color: #ffffee;
+    
+                    .qb-pic{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+        }
+        
+        .qb-info-card-cover{
+            background-color: #fbfbfb;
+
+            .qb-card-translate{
+                transform: translateY(35vw);
+            }
+            .qb-card-padding-top{
+
+            }
+            
+            .qb-info-card{
+                height: 500px;
             }
         }
     }
