--- a/css/home.css
+++ b/css/home.css
@@ -171,7 +171,6 @@
 
 .qb-main .qb-info-card-cover .qb-info-card .qb-info-card-text {
   display: inline-block;
-  padding-top: 20px;
   width: 100%;
   padding-bottom: 20px;
   padding-right: 0px;
@@ -191,10 +190,32 @@
   width: 100%;
 }
 
-.qb-main .qb-info-card-cover .qb-info-card .qb-project-card {
+.qb-main .qb-info-card-cover .qb-info-card .qb-info-card-text-padding {
+  padding-top: 20px;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-projects-info {
+  padding: 20px;
+  width: 600px;
+  display: inline-block;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-projects {
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-projects .qb-project-card {
   display: inline-block;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
 }
 
 @media only screen and (max-width: 600px) {
