--- a/css/home.scss
+++ b/css/home.scss
@@ -169,7 +169,6 @@
 
             .qb-info-card-text{
                 display: inline-block;
-                padding-top: 20px;
                 width: 100%;
                 padding-bottom: 20px;
                 padding-right: 0px;
@@ -188,11 +187,33 @@
             .qb-info-card-width-full{
                 width: 100%;
             }
-
-            .qb-project-card{
-                display: inline-block;
+            
+            .qb-info-card-text-padding{
                 padding-top: 20px;
-                padding-bottom: 20px;
+            }
+
+            .qb-projects-info{
+                padding: 20px;
+                width: 600px;
+                display: inline-block;
+            }
+
+            .qb-projects{
+                width: 100%;
+                padding-right: 5%;
+                padding-left: 5%;
+
+                .qb-project-card{
+                    display: inline-block;
+                    padding-top: 20px;
+                    padding-bottom: 20px;
+                    padding-left: 10%;
+                    padding-right: 10%;
+                    margin-top: 1.5%;
+                    margin-bottom: 1.5%;
+                    margin-left: 1.5%;
+                    margin-right: 1.5%;
+                }
             }
         }
     }
