--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 /*Universal Use*/
-.img-cover {
+.qbImgCover {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -13,6 +13,23 @@
   background-color: #06A763 !important;
 }
 
+.qbCardShadow {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
+}
+
+.qbCardWidthLimit {
+  display: inline-block;
+  width: 600px;
+}
+
+@media only screen and (max-width: 600px) {
+  .qbCardWidthLimit {
+    display: inline-block;
+    width: 100%;
+  }
+}
+
 .qb-header {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.3);
@@ -20,8 +37,6 @@
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
   width: 100%;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
 }
 
 .qb-header .qb-header-logo {
@@ -125,8 +140,6 @@
 
 .qb-main .qb-pic-card-cover .qb-pic-card {
   display: inline-block;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
 }
 
 .qb-main .qb-pic-card-cover .qb-pic-card .qb-card {
@@ -218,6 +231,32 @@
   margin-right: 1.5%;
 }
 
+.qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-head {
+  text-align: left;
+  font-size: 30px;
+  padding-top: 35px;
+  padding-left: 20%;
+  padding-bottom: 20px;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards {
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card {
+  display: inline-block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+}
+
 @media only screen and (max-width: 600px) {
   .qb-main {
     background-color: #08b76d;
@@ -234,8 +273,6 @@
   }
   .qb-main .qb-pic-card-cover .qb-pic-card {
     display: inline-block;
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
   }
   .qb-main .qb-pic-card-cover .qb-pic-card .qb-card {
     width: 70vw;
@@ -253,8 +290,79 @@
     -webkit-transform: translateY(35vw);
             transform: translateY(35vw);
   }
-  .qb-main .qb-info-card-cover .qb-info-card {
-    height: 500px;
+  .qb-main .qb-info-card-cover .qb-card-padding-top {
+    padding-top: 25px;
   }
+  .qb-main .qb-info-card-cover .qb-info-card {
+    height: auto;
+    text-align: center;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-info-card-head {
+    text-align: center;
+    font-size: 35px;
+    height: auto;
+    font-weight: 500;
+    color: #3a3a3a;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-info-card-width-limit {
+    width: 100%;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-info-card-width-full {
+    width: 100%;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-info-card-text {
+    padding: 20px 20px;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-projects-info {
+    padding: 20px;
+    width: 100%;
+    display: inline-block;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-projects {
+    width: 100%;
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-projects .qb-project-card {
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-head {
+    text-align: left;
+    font-size: 30px;
+    padding-top: 35px;
+    padding-left: 5%;
+    padding-bottom: 20px;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards {
+    width: 100%;
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card {
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+  }
+}
+
+.qb-footer {
+  background-color: #08b76d;
+  padding: 100px;
 }
 /*# sourceMappingURL=home.css.map */
