--- a/css/home.scss
+++ b/css/home.scss
@@ -1,5 +1,5 @@
 /*Universal Use*/
-.img-cover{
+.qbImgCover{
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -10,13 +10,26 @@
 .qbColorGreen{
     background-color: #06A763 !important;
 }
+.qbCardShadow{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28); 
+}
+.qbCardWidthLimit{
+    display: inline-block;
+    width: 600px;
+}
+@media only screen and (max-width: 600px){
+    .qbCardWidthLimit{
+        display: inline-block;
+        width: 100%;
+    }
+}
+
 .qb-header{
     position: fixed;
     background-color: rgba(0,0,0,0.3);
     z-index: 2;
     transition-duration: 0.5s;
     width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28); 
 
     .qb-header-logo{
         font-size: 25px;
@@ -125,7 +138,6 @@
 
         .qb-pic-card{
             display: inline-block;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
                 
             .qb-card{
                 width: 400px;
@@ -215,6 +227,35 @@
                     margin-right: 1.5%;
                 }
             }
+            
+            .qb-skills{
+                
+                .qb-skill-head{
+                    text-align: left;
+                    font-size: 30px;
+                    padding-top: 35px;
+                    padding-left: 20%;
+                    padding-bottom: 20px;
+                }
+
+                .qb-skill-cards{
+                    width: 100%;
+                    padding-right: 5%;
+                    padding-left: 5%;
+    
+                    .qb-skill-card{
+                        display: inline-block;
+                        padding-top: 20px;
+                        padding-bottom: 20px;
+                        padding-left: 10%;
+                        padding-right: 10%;
+                        margin-top: 1.5%;
+                        margin-bottom: 1.5%;
+                        margin-left: 1.5%;
+                        margin-right: 1.5%;
+                    }
+                }
+            }
         }
     }
 }
@@ -235,7 +276,6 @@
     
             .qb-pic-card{
                 display: inline-block;
-                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.28);
                 
                 .qb-card{
                     width: 70vw;
@@ -257,12 +297,92 @@
                 transform: translateY(35vw);
             }
             .qb-card-padding-top{
-
+                padding-top: 25px;
             }
             
             .qb-info-card{
-                height: 500px;
+                height: auto;
+                text-align: center;
+
+                .qb-info-card-head{
+                    text-align: center;
+                    font-size: 35px;
+                    height: auto;
+                    font-weight: 500;
+                    color: #3a3a3a;
+                    padding-right: 10px;
+                    padding-left: 10px;
+                }
+
+                .qb-info-card-width-limit{
+                    width: 100%;
+                }
+                .qb-info-card-width-full{
+                    width: 100%;
+                }
+                .qb-info-card-text{
+                    padding: 20px 20px;
+                }
+
+                .qb-projects-info{
+                    padding: 20px;
+                    width: 100%;
+                    display: inline-block
+                }
+
+                .qb-projects{
+                    width: 100%;
+                    padding-right: 5%;
+                    padding-left: 5%; 
+                    
+                    .qb-project-card{
+                        display: inline-block;
+                        padding-top: 20px;
+                        padding-bottom: 20px;
+                        padding-left: 10%;
+                        padding-right: 10%;
+                        margin-top: 5%;
+                        margin-bottom: 5%;
+                        margin-left: 1.5%;
+                        margin-right: 1.5%;
+                    }
+                }
+            
+                .qb-skills{
+                    
+                    .qb-skill-head{
+                        text-align: left;
+                        font-size: 30px;
+                        padding-top: 35px;
+                        padding-left: 5%;
+                        padding-bottom: 20px;
+                    }
+    
+                    .qb-skill-cards{
+                        width: 100%;
+                        padding-right: 5%;
+                        padding-left: 5%;
+        
+                        .qb-skill-card{
+                            display: inline-block;
+                            padding-top: 20px;
+                            padding-bottom: 20px;
+                            padding-left: 10%;
+                            padding-right: 10%;
+                            margin-top: 5%;
+                            margin-bottom: 5%;
+                            margin-left: 2.5%;
+                            margin-right: 2.5%;
+                        }
+                    }
+                }
+
             }
         }
     }
+}
+
+.qb-footer{
+    background-color: #08b76d;
+    padding: 100px;
 }
