--- a/css/home.scss
+++ b/css/home.scss
@@ -217,14 +217,18 @@
 
                 .qb-project-card{
                     display: inline-block;
-                    padding-top: 20px;
-                    padding-bottom: 20px;
-                    padding-left: 10%;
-                    padding-right: 10%;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                    padding-left: 25px;
+                    padding-right: 25px;
                     margin-top: 1.5%;
                     margin-bottom: 1.5%;
                     margin-left: 1.5%;
                     margin-right: 1.5%;
+
+                    .qb-project-card-icon{
+                        font-size: 50px;
+                    }
                 }
             }
             
@@ -245,14 +249,19 @@
     
                     .qb-skill-card{
                         display: inline-block;
-                        padding-top: 20px;
-                        padding-bottom: 20px;
-                        padding-left: 10%;
-                        padding-right: 10%;
+                        width: 220px;
+                        padding-top: 10px;
+                        padding-bottom: 10px;
+                        padding-left: 25px;
+                        padding-right: 25px;
                         margin-top: 1.5%;
                         margin-bottom: 1.5%;
                         margin-left: 1.5%;
                         margin-right: 1.5%;
+
+                        .qb-skill-card-icon{
+                            font-size: 55px;
+                        }
                     }
                 }
             }
@@ -337,8 +346,9 @@
                     
                     .qb-project-card{
                         display: inline-block;
-                        padding-top: 20px;
-                        padding-bottom: 20px;
+                        width: 70%;
+                        padding-top: 15px;
+                        padding-bottom: 15px;
                         padding-left: 10%;
                         padding-right: 10%;
                         margin-top: 5%;
@@ -365,6 +375,7 @@
         
                         .qb-skill-card{
                             display: inline-block;
+                            width: 70%;
                             padding-top: 20px;
                             padding-bottom: 20px;
                             padding-left: 10%;
