--- a/css/home.scss
+++ b/css/home.scss
@@ -375,7 +375,7 @@
         
                         .qb-skill-card{
                             display: inline-block;
-                            width: 70%;
+                            width: auto;
                             padding-top: 20px;
                             padding-bottom: 20px;
                             padding-left: 10%;
