--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,11 @@
   }
 }
 
+.qbCardTitle {
+  font-size: 20px;
+  font-weight: 500;
+}
+
 .qb-header {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.3);
@@ -189,9 +194,9 @@
   padding-right: 0px;
   padding-left: 0px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   height: auto;
-  font-weight: 500;
+  font-weight: 400;
   color: #3a3a3a;
 }
 
@@ -233,11 +238,13 @@
 
 .qb-main .qb-info-card-cover .qb-info-card .qb-projects .qb-project-card .qb-project-card-icon {
   font-size: 50px;
+  font-weight: 500;
 }
 
 .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-head {
   text-align: left;
   font-size: 30px;
+  font-weight: 500;
   padding-top: 35px;
   padding-left: 20%;
   padding-bottom: 20px;
@@ -264,6 +271,11 @@
 
 .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card .qb-skill-card-icon {
   font-size: 55px;
+}
+
+.qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card .qb-skill-card-text {
+  font-size: 20px;
+  font-weight: 500;
 }
 
 @media only screen and (max-width: 600px) {
@@ -346,6 +358,10 @@
     margin-left: 1.5%;
     margin-right: 1.5%;
   }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-projects .qb-project-card .qb-project-card-icon {
+    font-size: 50px;
+    font-weight: 500;
+  }
   .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-head {
     text-align: left;
     font-size: 30px;
@@ -361,14 +377,20 @@
   .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card {
     display: inline-block;
     width: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 15%;
+    padding-right: 15%;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 2.5%;
     margin-right: 2.5%;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card .qb-skill-card-icon {
+    font-size: 40px;
+  }
+  .qb-main .qb-info-card-cover .qb-info-card .qb-skills .qb-skill-cards .qb-skill-card .qb-skill-card-text {
+    font-size: 15px;
   }
 }
 
