--- a/css/home.scss
+++ b/css/home.scss
@@ -24,6 +24,11 @@
     }
 }
 
+.qbCardTitle{
+    font-size: 20px;
+    font-weight: 500;
+}
+
 .qb-header{
     position: fixed;
     background-color: rgba(0,0,0,0.3);
@@ -186,9 +191,9 @@
                 padding-right: 0px;
                 padding-left: 0px;
                 text-align: center;
-                font-size: 20px;
+                font-size: 18px;
                 height: auto;
-                font-weight: 500;
+                font-weight: 400;
                 color: #3a3a3a;
             }
 
@@ -228,6 +233,7 @@
 
                     .qb-project-card-icon{
                         font-size: 50px;
+                        font-weight: 500;
                     }
                 }
             }
@@ -237,6 +243,7 @@
                 .qb-skill-head{
                     text-align: left;
                     font-size: 30px;
+                    font-weight: 500;
                     padding-top: 35px;
                     padding-left: 20%;
                     padding-bottom: 20px;
@@ -261,6 +268,10 @@
 
                         .qb-skill-card-icon{
                             font-size: 55px;
+                        }
+                        .qb-skill-card-text{
+                            font-size: 20px;
+                            font-weight: 500;
                         }
                     }
                 }
@@ -355,6 +366,11 @@
                         margin-bottom: 5%;
                         margin-left: 1.5%;
                         margin-right: 1.5%;
+
+                        .qb-project-card-icon{
+                            font-size: 50px;
+                            font-weight: 500;
+                        }
                     }
                 }
             
@@ -376,14 +392,22 @@
                         .qb-skill-card{
                             display: inline-block;
                             width: auto;
-                            padding-top: 20px;
-                            padding-bottom: 20px;
-                            padding-left: 10%;
-                            padding-right: 10%;
+                            padding-top: 5px;
+                            padding-bottom: 10px;
+                            padding-left: 15%;
+                            padding-right: 15%;
                             margin-top: 5%;
                             margin-bottom: 5%;
                             margin-left: 2.5%;
                             margin-right: 2.5%;
+
+                            .qb-skill-card-icon{
+                                font-size: 40px;
+                            }
+                            
+                            .qb-skill-card-text{
+                                font-size: 15px;
+                            }
                         }
                     }
                 }
