Profile pic Added

--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,15 @@
   }
 }
 
+.qb-img {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+::after {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+}
+
 .qbCardTitle {
   font-size: 20px;
   font-weight: 500;
