--- a/css/home.css
+++ b/css/home.css
@@ -486,14 +486,17 @@
   .qb-footer {
     background-color: #08b76d;
     padding-top: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-bottom: 25px;
   }
   .qb-footer .qb-footer-head {
     padding: 10px;
     font-size: 30px;
     color: #fff;
     text-align: center;
+  }
+  .qb-footer .qb-footer-padding {
+    padding-left: 10%;
+    padding-right: 10%;
   }
   .qb-footer .qb-footer-text {
     text-align: center;
@@ -502,7 +505,7 @@
     padding: 5px;
   }
   .qb-footer .qb-footer-cards {
-    padding: 5%;
+    padding-top: 0%;
     text-align: center;
   }
   .qb-footer .qb-footer-cards .qb-footer-card {
@@ -519,7 +522,7 @@
     color: #fff;
   }
   .qb-footer .qb-site {
-    padding-top: 30px;
+    padding-top: 0px;
     padding-bottom: 30px;
   }
   .qb-footer .qb-site .qb-site-logo {
