--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,8 @@
 /*Universal Use*/
+body, html {
+  height: 100%;
+}
+
 .qbImgCover {
   background-position: center center;
   background-size: cover;
@@ -77,7 +81,7 @@
 
 .qb-wall {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .qb-wall .qb-wall-bg-cover {
@@ -118,7 +122,7 @@
 @media only screen and (max-width: 600px) {
   .qb-wall {
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
   .qb-wall .qb-wall-bg-cover .qb-wall-bg {
     height: 100%;
