--- a/css/home.scss
+++ b/css/home.scss
@@ -48,7 +48,8 @@ body,html{
     width: 100%;
 
     .qb-header-logo{
-        font-size: 25px;
+        font-size: 20px;
+        padding-left: 20px;
     }
 
     .qb-navbar{
@@ -65,6 +66,9 @@ body,html{
 
 @media only screen and (max-width: 768px){
     .qb-header{
+        .qb-header-logo{
+
+        }
         .qb-navbar{
     
             .qb-navbar-collapse{
@@ -502,6 +506,7 @@ body,html{
         }
     }
     .qb-credit{
+        padding: 1%;
         background-color: #fff;
         text-align: center;
         color: #3a3a3a;
@@ -573,7 +578,7 @@ body,html{
 
         }
         .qb-credit{
-            background-color: #3a3a3a;
+            background-color: black;
             text-align: center;
             color: #fff;
         }
