--- a/css/home.scss
+++ b/css/home.scss
@@ -506,7 +506,7 @@ body,html{
         }
     }
     .qb-credit{
-        padding: 1%;
+        padding: 1.5%;
         background-color: #fff;
         text-align: center;
         color: #3a3a3a;
@@ -578,7 +578,7 @@ body,html{
 
         }
         .qb-credit{
-            background-color: black;
+            background-color: #3a3a3a;
             text-align: center;
             color: #fff;
         }
